feat(): Snapshot и миграции, исправлено добавление рецепта в базу, исправлен тип id
