# src/Cookbook/Swagger/swagger.json
@@ -774,7 +774,7 @@
                   "Schema": {
                     "Title": null,
                     "Type": "integer",
-                    "Format": "int32",
+                    "Format": "int64",
                     "Description": null,
                     "Maximum": null,
                     "ExclusiveMaximum": null,
@@ -821,7 +821,7 @@
                   "Schema": {
                     "Title": null,
                     "Type": "integer",
-                    "Format": "int32",
+                    "Format": "int64",
                     "Description": null,
                     "Maximum": null,
                     "ExclusiveMaximum": null,
@@ -868,7 +868,7 @@
                   "Schema": {
                     "Title": null,
                     "Type": "integer",
-                    "Format": "int32",
+                    "Format": "int64",
                     "Description": null,
                     "Maximum": null,
                     "ExclusiveMaximum": null,
@@ -1555,12 +1555,12 @@
                     "IsFragrament": false,
                     "ExternalResource": null,
                     "Type": 0,
-                    "Id": "Recipe",
+                    "Id": "RecipeCreate",
                     "IsExternal": false,
                     "IsLocal": true,
                     "HostDocument": null,
-                    "ReferenceV3": "#/components/schemas/Recipe",
-                    "ReferenceV2": "#/definitions/Recipe"
+                    "ReferenceV3": "#/components/schemas/RecipeCreate",
+                    "ReferenceV2": "#/definitions/RecipeCreate"
                   }
                 },
                 "Example": null,
@@ -1612,12 +1612,12 @@
                     "IsFragrament": false,
                     "ExternalResource": null,
                     "Type": 0,
-                    "Id": "Recipe",
+                    "Id": "RecipeCreate",
                     "IsExternal": false,
                     "IsLocal": true,
                     "HostDocument": null,
-                    "ReferenceV3": "#/components/schemas/Recipe",
-                    "ReferenceV2": "#/definitions/Recipe"
+                    "ReferenceV3": "#/components/schemas/RecipeCreate",
+                    "ReferenceV2": "#/definitions/RecipeCreate"
                   }
                 },
                 "Example": null,
@@ -1669,12 +1669,12 @@
                     "IsFragrament": false,
                     "ExternalResource": null,
                     "Type": 0,
-                    "Id": "Recipe",
+                    "Id": "RecipeCreate",
                     "IsExternal": false,
                     "IsLocal": true,
                     "HostDocument": null,
-                    "ReferenceV3": "#/components/schemas/Recipe",
-                    "ReferenceV2": "#/definitions/Recipe"
+                    "ReferenceV3": "#/components/schemas/RecipeCreate",
+                    "ReferenceV2": "#/definitions/RecipeCreate"
                   }
                 },
                 "Example": null,
@@ -1694,7 +1694,7 @@
                   "Schema": {
                     "Title": null,
                     "Type": "integer",
-                    "Format": "int32",
+                    "Format": "int64",
                     "Description": null,
                     "Maximum": null,
                     "ExclusiveMaximum": null,
@@ -1741,7 +1741,7 @@
                   "Schema": {
                     "Title": null,
                     "Type": "integer",
-                    "Format": "int32",
+                    "Format": "int64",
                     "Description": null,
                     "Maximum": null,
                     "ExclusiveMaximum": null,
@@ -1788,7 +1788,7 @@
                   "Schema": {
                     "Title": null,
                     "Type": "integer",
-                    "Format": "int32",
+                    "Format": "int64",
                     "Description": null,
                     "Maximum": null,
                     "ExclusiveMaximum": null,
@@ -1883,7 +1883,7 @@
           "id": {
             "Title": null,
             "Type": "integer",
-            "Format": "int32",
+            "Format": "int64",
             "Description": null,
             "Maximum": null,
             "ExclusiveMaximum": null,
@@ -2212,7 +2212,7 @@
           "id": {
             "Title": null,
             "Type": "integer",
-            "Format": "int32",
+            "Format": "int64",
             "Description": null,
             "Maximum": null,
             "ExclusiveMaximum": null,
@@ -2808,6 +2808,391 @@
         "Extensions": {},
         "UnresolvedReference": false,
         "Reference": null
+      },
+      "RecipeCreate": {
+        "Title": null,
+        "Type": "object",
+        "Format": null,
+        "Description": null,
+        "Maximum": null,
+        "ExclusiveMaximum": null,
+        "Minimum": null,
+        "ExclusiveMinimum": null,
+        "MaxLength": null,
+        "MinLength": null,
+        "Pattern": null,
+        "MultipleOf": null,
+        "Default": null,
+        "ReadOnly": false,
+        "WriteOnly": false,
+        "AllOf": [],
+        "OneOf": [],
+        "AnyOf": [],
+        "Not": null,
+        "Required": [
+          "ingredients",
+          "instruction",
+          "name",
+          "servingsNumber"
+        ],
+        "Items": null,
+        "MaxItems": null,
+        "MinItems": null,
+        "UniqueItems": null,
+        "Properties": {
+          "name": {
+            "Title": null,
+            "Type": "string",
+            "Format": null,
+            "Description": null,
+            "Maximum": null,
+            "ExclusiveMaximum": null,
+            "Minimum": null,
+            "ExclusiveMinimum": null,
+            "MaxLength": null,
+            "MinLength": 1,
+            "Pattern": null,
+            "MultipleOf": null,
+            "Default": null,
+            "ReadOnly": false,
+            "WriteOnly": false,
+            "AllOf": [],
+            "OneOf": [],
+            "AnyOf": [],
+            "Not": null,
+            "Required": [],
+            "Items": null,
+            "MaxItems": null,
+            "MinItems": null,
+            "UniqueItems": null,
+            "Properties": {},
+            "MaxProperties": null,
+            "MinProperties": null,
+            "AdditionalPropertiesAllowed": true,
+            "AdditionalProperties": null,
+            "Discriminator": null,
+            "Example": null,
+            "Enum": [],
+            "Nullable": false,
+            "ExternalDocs": null,
+            "Deprecated": false,
+            "Xml": null,
+            "Extensions": {},
+            "UnresolvedReference": false,
+            "Reference": null
+          },
+          "servingsNumber": {
+            "Title": null,
+            "Type": "integer",
+            "Format": "int32",
+            "Description": null,
+            "Maximum": null,
+            "ExclusiveMaximum": null,
+            "Minimum": null,
+            "ExclusiveMinimum": null,
+            "MaxLength": null,
+            "MinLength": null,
+            "Pattern": null,
+            "MultipleOf": null,
+            "Default": null,
+            "ReadOnly": false,
+            "WriteOnly": false,
+            "AllOf": [],
+            "OneOf": [],
+            "AnyOf": [],
+            "Not": null,
+            "Required": [],
+            "Items": null,
+            "MaxItems": null,
+            "MinItems": null,
+            "UniqueItems": null,
+            "Properties": {},
+            "MaxProperties": null,
+            "MinProperties": null,
+            "AdditionalPropertiesAllowed": true,
+            "AdditionalProperties": null,
+            "Discriminator": null,
+            "Example": null,
+            "Enum": [],
+            "Nullable": false,
+            "ExternalDocs": null,
+            "Deprecated": false,
+            "Xml": null,
+            "Extensions": {},
+            "UnresolvedReference": false,
+            "Reference": null
+          },
+          "instruction": {
+            "Title": null,
+            "Type": "string",
+            "Format": null,
+            "Description": null,
+            "Maximum": null,
+            "ExclusiveMaximum": null,
+            "Minimum": null,
+            "ExclusiveMinimum": null,
+            "MaxLength": null,
+            "MinLength": 1,
+            "Pattern": null,
+            "MultipleOf": null,
+            "Default": null,
+            "ReadOnly": false,
+            "WriteOnly": false,
+            "AllOf": [],
+            "OneOf": [],
+            "AnyOf": [],
+            "Not": null,
+            "Required": [],
+            "Items": null,
+            "MaxItems": null,
+            "MinItems": null,
+            "UniqueItems": null,
+            "Properties": {},
+            "MaxProperties": null,
+            "MinProperties": null,
+            "AdditionalPropertiesAllowed": true,
+            "AdditionalProperties": null,
+            "Discriminator": null,
+            "Example": null,
+            "Enum": [],
+            "Nullable": false,
+            "ExternalDocs": null,
+            "Deprecated": false,
+            "Xml": null,
+            "Extensions": {},
+            "UnresolvedReference": false,
+            "Reference": null
+          },
+          "ingredients": {
+            "Title": null,
+            "Type": "array",
+            "Format": null,
+            "Description": null,
+            "Maximum": null,
+            "ExclusiveMaximum": null,
+            "Minimum": null,
+            "ExclusiveMinimum": null,
+            "MaxLength": null,
+            "MinLength": null,
+            "Pattern": null,
+            "MultipleOf": null,
+            "Default": null,
+            "ReadOnly": false,
+            "WriteOnly": false,
+            "AllOf": [],
+            "OneOf": [],
+            "AnyOf": [],
+            "Not": null,
+            "Required": [],
+            "Items": {
+              "Title": null,
+              "Type": null,
+              "Format": null,
+              "Description": null,
+              "Maximum": null,
+              "ExclusiveMaximum": null,
+              "Minimum": null,
+              "ExclusiveMinimum": null,
+              "MaxLength": null,
+              "MinLength": null,
+              "Pattern": null,
+              "MultipleOf": null,
+              "Default": null,
+              "ReadOnly": false,
+              "WriteOnly": false,
+              "AllOf": [],
+              "OneOf": [],
+              "AnyOf": [],
+              "Not": null,
+              "Required": [],
+              "Items": null,
+              "MaxItems": null,
+              "MinItems": null,
+              "UniqueItems": null,
+              "Properties": {},
+              "MaxProperties": null,
+              "MinProperties": null,
+              "AdditionalPropertiesAllowed": true,
+              "AdditionalProperties": null,
+              "Discriminator": null,
+              "Example": null,
+              "Enum": [],
+              "Nullable": false,
+              "ExternalDocs": null,
+              "Deprecated": false,
+              "Xml": null,
+              "Extensions": {},
+              "UnresolvedReference": false,
+              "Reference": {
+                "IsFragrament": false,
+                "ExternalResource": null,
+                "Type": 0,
+                "Id": "RecipeIngredient",
+                "IsExternal": false,
+                "IsLocal": true,
+                "HostDocument": null,
+                "ReferenceV3": "#/components/schemas/RecipeIngredient",
+                "ReferenceV2": "#/definitions/RecipeIngredient"
+              }
+            },
+            "MaxItems": null,
+            "MinItems": null,
+            "UniqueItems": null,
+            "Properties": {},
+            "MaxProperties": null,
+            "MinProperties": null,
+            "AdditionalPropertiesAllowed": true,
+            "AdditionalProperties": null,
+            "Discriminator": null,
+            "Example": null,
+            "Enum": [],
+            "Nullable": false,
+            "ExternalDocs": null,
+            "Deprecated": false,
+            "Xml": null,
+            "Extensions": {},
+            "UnresolvedReference": false,
+            "Reference": null
+          }
+        },
+        "MaxProperties": null,
+        "MinProperties": null,
+        "AdditionalPropertiesAllowed": false,
+        "AdditionalProperties": null,
+        "Discriminator": null,
+        "Example": null,
+        "Enum": [],
+        "Nullable": false,
+        "ExternalDocs": null,
+        "Deprecated": false,
+        "Xml": null,
+        "Extensions": {},
+        "UnresolvedReference": false,
+        "Reference": null
+      },
+      "RecipeIngredient": {
+        "Title": null,
+        "Type": "object",
+        "Format": null,
+        "Description": null,
+        "Maximum": null,
+        "ExclusiveMaximum": null,
+        "Minimum": null,
+        "ExclusiveMinimum": null,
+        "MaxLength": null,
+        "MinLength": null,
+        "Pattern": null,
+        "MultipleOf": null,
+        "Default": null,
+        "ReadOnly": false,
+        "WriteOnly": false,
+        "AllOf": [],
+        "OneOf": [],
+        "AnyOf": [],
+        "Not": null,
+        "Required": [],
+        "Items": null,
+        "MaxItems": null,
+        "MinItems": null,
+        "UniqueItems": null,
+        "Properties": {
+          "ingredientId": {
+            "Title": null,
+            "Type": "integer",
+            "Format": "int64",
+            "Description": null,
+            "Maximum": null,
+            "ExclusiveMaximum": null,
+            "Minimum": null,
+            "ExclusiveMinimum": null,
+            "MaxLength": null,
+            "MinLength": null,
+            "Pattern": null,
+            "MultipleOf": null,
+            "Default": null,
+            "ReadOnly": false,
+            "WriteOnly": false,
+            "AllOf": [],
+            "OneOf": [],
+            "AnyOf": [],
+            "Not": null,
+            "Required": [],
+            "Items": null,
+            "MaxItems": null,
+            "MinItems": null,
+            "UniqueItems": null,
+            "Properties": {},
+            "MaxProperties": null,
+            "MinProperties": null,
+            "AdditionalPropertiesAllowed": true,
+            "AdditionalProperties": null,
+            "Discriminator": null,
+            "Example": null,
+            "Enum": [],
+            "Nullable": false,
+            "ExternalDocs": null,
+            "Deprecated": false,
+            "Xml": null,
+            "Extensions": {},
+            "UnresolvedReference": false,
+            "Reference": null
+          },
+          "weight": {
+            "Title": null,
+            "Type": "number",
+            "Format": "double",
+            "Description": null,
+            "Maximum": null,
+            "ExclusiveMaximum": null,
+            "Minimum": null,
+            "ExclusiveMinimum": null,
+            "MaxLength": null,
+            "MinLength": null,
+            "Pattern": null,
+            "MultipleOf": null,
+            "Default": null,
+            "ReadOnly": false,
+            "WriteOnly": false,
+            "AllOf": [],
+            "OneOf": [],
+            "AnyOf": [],
+            "Not": null,
+            "Required": [],
+            "Items": null,
+            "MaxItems": null,
+            "MinItems": null,
+            "UniqueItems": null,
+            "Properties": {},
+            "MaxProperties": null,
+            "MinProperties": null,
+            "AdditionalPropertiesAllowed": true,
+            "AdditionalProperties": null,
+            "Discriminator": null,
+            "Example": null,
+            "Enum": [],
+            "Nullable": false,
+            "ExternalDocs": null,
+            "Deprecated": false,
+            "Xml": null,
+            "Extensions": {},
+            "UnresolvedReference": false,
+            "Reference": null
+          }
+        },
+        "MaxProperties": null,
+        "MinProperties": null,
+        "AdditionalPropertiesAllowed": false,
+        "AdditionalProperties": null,
+        "Discriminator": null,
+        "Example": null,
+        "Enum": [],
+        "Nullable": false,
+        "ExternalDocs": null,
+        "Deprecated": false,
+        "Xml": null,
+        "Extensions": {},
+        "UnresolvedReference": false,
+        "Reference": null
       }
     },
     "Responses": {},
@@ -2824,5 +3209,5 @@
   "Tags": [],
   "ExternalDocs": null,
   "Extensions": {},
-  "HashCode": "4F038EC76A1ED7D3430A685565326CB9967CC1E42A509315558B8832F74256EBF82D4A22EB718A15B5B5DFE1B9EE5415C832E536A077B14C85CBA39FC3CFF4D3"
+  "HashCode": "178073D6CA1A1B140432A849FE0E1C9B32D1D7CD05ADC5C9FBEC4D528B308CF72F14452669A155527C41CD3F80C1860568524ACF3B875B7DC7884569503CD11E"
 }
